--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,5 @@ Options +SymLinksIfOwnerMatch
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !folder/
 RewriteRule . /index.php [L]
